--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,48 @@
 ---
-import Welcome from '../components/Welcome.astro';
-import Layout from '../layouts/Layout.astro';
+import PostCard from '/src/components/PostCard.astro';
+import { getCollection } from 'astro:content';
 
-// Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
-// Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
+// blog コレクションを取得
+const posts = await getCollection("blog");
+
+// 日付順で降順にソート（最新記事が上）
+posts.sort((a, b) => new Date(b.data.date) - new Date(a.data.date));
 ---
 
-<Layout>
-	<Welcome />
-</Layout>
+<html lang="ja">
+  <head>
+    <meta charset="UTF-8">
+    <title>NoCream トップページ</title>
+    <link rel="stylesheet" href="/styles/index.css">
+  </head>
+  <body>
+    <header>
+      <h1>Welcome to my space</h1>
+    </header>
+
+    <main>
+      <section>
+        <h2>写真載せたいね</h2>
+        <p>
+          <a href="/memories">お店，料理の写真はこちら</a>
+        </p>
+      </section>
+
+      <section>
+        <h2>記事一覧</h2>
+        <div class="grid">
+          {posts.map(post => (
+            <PostCard
+              title={post.data.title}
+              date={post.data.date}
+              description={post.data.description}
+              slug={post.slug}
+              thumbnail={post.data.thumbnail}
+            />
+          ))}
+        </div>
+      </section>
+
+    </main>
+  </body>
+</html>
