--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -7,7 +7,7 @@ const { slug } = Astro.params;
 
 // blog コレクションから該当記事を探す
 const posts = await getCollection('blog');
-const post = posts.find((p) => p.slug === slug);
+const post = posts.find((p: { slug: any; }) => p.slug === slug);
 
 if (!post) {
   throw new Error(`Post not found for slug: ${slug}`);
@@ -19,7 +19,7 @@ const { Content } = await post.render();
 // ★ 動的ルート用：全ての slug を返す
 export async function getStaticPaths() {
   const posts = await getCollection('blog');
-  return posts.map(post => ({
+  return posts.map((post: { slug: any; }) => ({
     params: { slug: post.slug },
   }));
 }
@@ -36,7 +36,7 @@ export async function getStaticPaths() {
       <h1>{post.data.title}</h1>
       <p><em>{post.data.date}</em></p>
       <div>
-        <!-- Markdown が HTML に変換されて表示される -->
+        <!-- Markdown を HTML に変換して表示する -->
         <Content />
       </div>
     </article>
