--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,48 +1,115 @@
 ---
-import PostCard from '/src/components/PostCard.astro';
+import PostCard from '@/components/PostCard.astro';
 import { getCollection } from 'astro:content';
 
 // blog コレクションを取得
 const posts = await getCollection("blog");
 
 // 日付順で降順にソート（最新記事が上）
-posts.sort((a, b) => new Date(b.data.date) - new Date(a.data.date));
+posts.sort((a: { data: { date: string | number | Date; }; }, b: { data: { date: string | number | Date; }; }) => new Date(b.data.date).getTime() - new Date(a.data.date).getTime());
 ---
 
 <html lang="ja">
-  <head>
-    <meta charset="UTF-8">
-    <title>NoCream トップページ</title>
-    <link rel="stylesheet" href="/styles/index.css">
-  </head>
-  <body>
-    <header>
-      <h1>Welcome to my space</h1>
-    </header>
+    
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>DripNotes</title>
+        <link rel="stylesheet" href="/styles/index.css">
+        <!-- ほかのフォント -->
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Monsterrat:wght@300;400&display=swap">
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css">
+        <!-- DancingScript -->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&display=swap" rel="stylesheet">
+        <!-- Noto Sans JP -->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;700&display=swap" rel="stylesheet">
+    </head>
 
-    <main>
-      <section>
-        <h2>写真載せたいね</h2>
-        <p>
-          <a href="/memories">お店，料理の写真はこちら</a>
-        </p>
-      </section>
+    <body>
+        <header class="header">
+            <div class="header-container w-container">
+                <div class="site">
+                    <a href="index.html">
+                        <img class="logo"
+                            src="/images/header_icon.png"
+                            alt="header_icon"
+                            width="50" height="50">
+                    </a>
+                </div>
+                <div class="site">
+                    <a href="index.html" class="cursive">
+                        Drip-Notes
+                    </a>
+                </div>
+    <!--
+                <div class="header-setence">
+                    日常ブログ
+                </div>
+                -->
+                <button class="navbtn">
+                    <i class="fas fa-bars"></i>
+                    <span class="sr-only">MENU</span>
+                </button>
+            </div>
+        </header>
 
-      <section>
-        <h2>記事一覧</h2>
-        <div class="grid">
-          {posts.map(post => (
-            <PostCard
-              title={post.data.title}
-              date={post.data.date}
-              description={post.data.description}
-              slug={post.slug}
-              thumbnail={post.data.thumbnail}
-            />
-          ))}
-        </div>
-      </section>
+        <section class="hero">
+            <div class="hero-container w-container">
+                <h1>
+                    <div class="cursive sentence">Drip-Notes</div>
+                    <div class="sentence">by NoCream</div>
+                </h1>
+            </div>
+        </section>
 
-    </main>
-  </body>
+        <main>
+            <section class="profile">
+                <h2>My Profile</h2>
+                <p>
+                    <a href="#"><button class="profile-button">ぼたん</button></a>
+                </p>
+            </section>
+
+            <section>
+                <h2>記事一覧</h2>
+                <div class="grid">
+                    {posts.map((post: { data: { title: any; date: any; description: any; thumbnail: any; }; slug: any; }) => (
+                        <PostCard
+                            title={post.data.title}
+                            date={post.data.date}
+                            description={post.data.description}
+                            slug={post.slug}
+                            thumbnail={post.data.thumbnail}
+                        />
+                    ))}
+                </div>
+            </section>
+        </main>
+
+        <footer class="footer">
+            <div class="footer-container w-container">
+                <div class="cursive">
+                    Drip-Notes
+                </div>
+                <div class="footer-row">
+                    <ul class="footer-sns">
+                        <li><a href="https://x.com/sXMN1au45a68174"><i class="fab fa-twitter"></i></a></li>
+                        <li><a href="https://github.com/NoCream-jp" target="blank" rel="noopener"><i class="fab fa-github"></i></a></li>
+                    </ul>
+                    <ul class="footer-menu">
+                        <li><a href="#">Contact me</a></li>
+                        <li><a href="#">Assets|Credits</a></li>
+                    </ul>
+                </div>
+                <!-- <div class="footer-copy">
+                    @DripNotes
+                </div> -->
+            </div>
+        </footer>
+    </body>
 </html>
