--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -86,6 +86,13 @@ body {
     }
 }
 
+.grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+    gap: 16px;
+    margin-bottom: 40px;
+}
+
 h1, h2, h3, h4, h5, h6, p, ul {
     list-style: none;
     margin: 0;
