--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -77,7 +77,7 @@ posts.sort((a: { data: { date: string | number | Date; }; }, b: { data: { date: 
 
             <section>
                 <h2>記事一覧</h2>
-                <div class="grid">
+                <div class="posts">
                     {posts.map((post: { data: { title: any; date: any; description: any; thumbnail: any; }; slug: any; }) => (
                         <PostCard
                             title={post.data.title}
