--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -24,16 +24,30 @@ body {
     font-family: "Dancing Script", cursive;
 }
 
+/* 初期状態：透明で少し下に位置 */
+.fade-in {
+    opacity: 0;
+    transform: translateY(20px);
+    transition: opacity 0.9s ease, transform 1.0s ease;
+}
+
+/* 表示状態：透明度を1にし、元の位置に移動 */
+.fade-in.visible {
+    opacity: 1;
+    transform: translateY(0);
+}
+
 /* footer */
 .footer {
     background-color: #eeeeee;
-    border-top-left-radius: 15px;
-    border-top-right-radius: 15px;
-    color: #000000;
-    display: flex;
-    font-size: 20px;
-    padding: 70px 0;
     text-align: center;
+    padding: 100px 0; /* フッター内の余白 */
+    position: relative;
+    width: 100%;
+    height: 150px; /* フッター全体の高さ */
+    border-top-left-radius: 100% 75px; /* 左側の丸み */
+    border-top-right-radius: 100% 75px; /* 右側の丸み */
+    overflow: hidden; /* 内容が丸みを超えないようにする */
 }
 
 .footer .cursive {
@@ -101,7 +115,7 @@ body {
 
 /* ヘッダー */
 .header {
-    background-color: #eeeeee;
+    /* background-color: #eeeeee;
     border-bottom-left-radius: 15px;
     border-bottom-right-radius: 15px;
     height: 112px;
@@ -109,7 +123,22 @@ body {
     position: fixed;
     top: 0;
     width: 100%;
-    z-index: 10;
+    z-index: 10; */
+
+    background-color: #eeeeee; /* ヘッダーの背景色 */
+    color: white; /* テキストの色 */
+    text-align: center;
+    padding: 50px 0; /* ヘッダー内の余白 */
+    position: relative;
+    width: 100%;
+    height: 70px; /* ヘッダー全体の高さ */
+    border-bottom-left-radius: 100% 75px; /* 左側の丸み */
+    border-bottom-right-radius: 100% 75px; /* 右側の丸み */
+    overflow: hidden; /* 内容が丸みを超えないようにする */
+}
+
+.header img {
+    border-radius: 10px; /* 角を丸める場合 */
 }
 
 .header .sentence {
@@ -256,6 +285,7 @@ img {
 
 .site {
     cursor: pointer;
+    text-decoration: none;
 }
 
 .works {
