--- a/src/components/PostCard.astro
+++ b/src/components/PostCard.astro
@@ -56,6 +56,11 @@ const { title, date, description, slug, thumbnail } = Astro.props;
     text-decoration: none;
 }
 
+.card a {
+    text-decoration: none; /* 下線を削除 */
+    color: inherit; /* テキストの色を継承 */
+}
+
 .card h2 {
     font-size: 1.4rem;
     margin: 8px 0;
@@ -65,6 +70,11 @@ const { title, date, description, slug, thumbnail } = Astro.props;
     -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;
     text-overflow: ellipsis;
+}
+
+.card:hover {
+    transform: translateY(-10px);
+    box-shadow: 0 8px 12px rgba(0, 0, 0, 0.2);
 }
 
 .card .date {
@@ -84,8 +94,5 @@ const { title, date, description, slug, thumbnail } = Astro.props;
     text-overflow: ellipsis;
 }
 
-.card a {
-    text-decoration: none; /* 下線を削除 */
-    color: inherit; /* テキストの色を継承 */
-}
+
 </style>
